--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ ul li {
      float:left;
     width:200px;
         height:40px;
-    background-color:red;
+    background-color:Purple;
     opacity:.8;
     line-height: 40px;
     text-align:center;
