--- a/style.css
+++ b/style.css
@@ -35,3 +35,83 @@ ul li:hover ul li {
     display: block;
 }
 
+{
+width: 100%;
+height: 100%;
+padding: 0;
+margin: 0px;
+}
+
+slider {
+    display : block;
+    width: 100%;
+    height:100%;
+    background-color: #1f1f1f; 
+    overflow : hidden;
+    position : absolute;
+}
+
+slider> * {
+    position : absolute;
+    display: block;
+    width: 100%;
+    height:100%;
+    background: #1f1f1f;
+    animation: slide 14s infinite;
+    overflow: hidden;
+}
+
+slide: nth-child (1) {
+left: 0%;
+animation-delay: -1s;
+    background img: url (1jpg);
+    background-size: cover;
+    background-positon: center;       
+}
+
+slide: nth-child (2){
+animation-delay: 2s;
+    background img: url (2jpg);
+        background-size: cover;
+    background-positon: center;       
+}
+
+slide: nth-child (3){
+animation-delay:  5s;
+    background img: url (3jpg);
+    background-size: cover;
+    background-positon: center;       
+}
+
+slide: nth-child (4) {
+animation-delay: 8s;
+    background img: url (4jpg);
+    background-size: cover;
+    background-positon: center;       
+}
+
+slide: nth-child (5) {
+animation-delay: 10s;
+    background img: url (5jpg);
+    background-size: cover;
+    background-positon: center;       
+}
+
+slide p {
+    font-family: comfortaa;
+    font-size: 70px;
+    text-aline: center;
+    display: inline-block;
+    width: 100%;
+    margin-top: 340px;
+    color: #fff;
+}
+
+@keyframes slide {
+    0% {left: 100%; width: 100%}
+    5% {left: 0%;}
+    25% {left: 0%;}
+    30% {left: -100%; width: 100%;}
+    30.0001% { left: -100%; width: 0%;)
+        100% { left: 100%; width: 0%;}   
+}
