--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ slider {
     display : block;
     width: 100%;
     height:100%;
-    background-color: #1f1f1f; 
+    background-color: none; 
     overflow : hidden;
     position : absolute;
 }
@@ -56,7 +56,7 @@ slider> * {
     display: block;
     width: 100%;
     height:100%;
-    background: #1f1f1f;
+    background: none;
     animation: slide 14s infinite;
     overflow: hidden;
 }
