--- a/style.css
+++ b/style.css
@@ -42,76 +42,39 @@ padding: 0;
 margin: 0px;
 }
 
-slider {
-    display : block;
-    width: 100%;
-    height:100%;
-    background-color: none; 
-    overflow : hidden;
-    position : absolute;
-}
-
-slider> * {
-    position : absolute;
-    display: block;
-    width: 100%;
-    height:100%;
+.slideshow {
+margin : 0 auto;
+    padding-top: 50px;
+    height: 700px;
     background: none;
-    animation: slide 14s infinite;
+    box-sizing: border-box;
+}
+    
+.content {
+margin: auto;
+    width: 190px;
+    perspective: 1000px;
+    position: relative;
+    padding-top: 80px;
+    }
+
+.content-carrousel{
+width: 100%;
+    position: absolute;
+    float: right;
+    animation: rotar 15s infinite linear;
+    transform-style: preserve-3d;
+}
+
+.content-carrousel: hover{
+    animation-play-state: paused;
+    cursor: pointer;
+}
+
+.content-carrousel figure{
+    height: 100%;
+    width: 120px;
+    border: 1px solid #d444d;
     overflow: hidden;
-}
-
-slide: nth-child (1) {
-left: 0%;
-animation-delay: -1s;
-    background img: url (1jpg);
-    background-size: cover;
-    background-positon: center;       
-}
-
-slide: nth-child (2){
-animation-delay: 2s;
-    background img: url (2jpg);
-        background-size: cover;
-    background-positon: center;       
-}
-
-slide: nth-child (3) {
-animation-delay:  5s;
-    background img: url (3jpg);
-    background-size: cover;
-    background-positon: center;       
-}
-
-slide: nth-child (4) {
-animation-delay: 8s;
-    background img: url (4jpg);
-    background-size: cover;
-    background-positon: center;       
-}
-
-slide: nth-child (5) {
-animation-delay: 10s;
-    background img: url (5jpg);
-    background-size: cover;
-    background-positon: center;       
-}
-
-slide p {
-    font-family: comfortaa;
-    font-size: 70px;
-    text-aline: center;
-    display: inline-block;
-    width: 100%;
-    margin-top: 340px;
-    color: none;
-}
-
-@keyframes slide {
-    0% {left: 100%; width: 100%}
-    5% {left: 0%;}
-    25% {left: 0%;}
-    30% {left: -100%; width: 100%;}
-    30.0001% { left: -100%; width: 0%;)
-        100% { left: 100%; width: 0%;}   
-}
+    position: absolute;
+    
