--- a/style.css
+++ b/style.css
@@ -77,4 +77,48 @@ width: 100%;
     border: 1px solid #d444d;
     overflow: hidden;
     position: absolute;
-    
+}
+
+.content-carrousel figure nth-child(1) {
+    transform: rotateY(0deg) translateZ(300px);  
+}
+
+.content-carrousel figure nth-child(2) {
+    transform: rotateY(40deg) translateZ(300px);  
+}
+
+.content-carrousel figure nth-child(3) {
+    transform: rotateY(80deg) translateZ(300px);  
+}
+
+.content-carrousel figure nth-child(4) {
+    transform: rotateY(120deg) translateZ(300px);  
+}
+
+.content-carrousel figure nth-child(5) {
+    transform: rotateY(160deg) translateZ(300px);  
+}
+
+.shadow {
+position: absolute;
+    box-shadow: 0px 0px 20px 0px #000;
+    border-radius: 2px;
+}
+
+.content-carrousel img{
+    image-rendering: auto;
+    transition:all 300ms;
+    width: 100%;
+    height: 100%;
+}
+
+.content-carrousel img:hover{
+    transform: scale (1.2);
+    transition: all 300ms;
+}
+@keyframes: rotar {
+    from { 
+        transform: rotateY(0deg)
+    } to {transform: rotateY(360deg)    
+    }
+}
