--- a/style.css
+++ b/style.css
@@ -40,3 +40,85 @@ height: 100%;
 padding: 0;
 margin: 0px;
 }
+
+.slideshow {
+margin : 0 auto;
+    padding-top: 0px;
+    height: 200px;
+    background: red;
+    box-sizing: border-box;
+}
+    
+.content {
+margin: auto;
+    width: 190px;
+    perspective: 200px;
+    position: relative;
+    padding-top: 80px;
+    }
+
+.content-carrousel{
+width: 100%;
+    position: absolute;
+    float: right;
+    animation: rotar 15s infinite linear;
+    transform-style: preserve-3d;
+}
+
+.content-carrousel: hover{
+    animation-play-state: paused;
+    cursor: pointer;
+}
+
+.content-carrousel figure{
+    height: 100%;
+    width: 120px;
+    border: 1px solid #d444d;
+    overflow: hidden;
+    position: absolute;
+}
+
+.content-carrousel figure nth-child(sthomp18.github.io/images/bosses.jpg) {
+    transform: rotateY(0deg) translateZ(100px);  
+}
+
+.content-carrousel figure nth-child(sthomp18.github.io/images/ADIDASDP34M.jpg) {
+    transform: rotateY(40deg) translateZ(100px);  
+}
+
+.content-carrousel figure nth-child(sthomp18.github.io/images/th.jpg) {
+    transform: rotateY(80deg) translateZ(100px);  
+}
+
+.content-carrousel figure nth-child(sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg) {
+    transform: rotateY(120deg) translateZ(100px);  
+}
+
+.content-carrousel figure nth-child(shadow"><img src="sthomp18.github.io/images/POLMCS4.jpg) {
+    transform: rotateY(160deg) translateZ(100px);  
+}
+
+.shadow {
+position: absolute;
+    box-shadow: 0px 0px 20px 0px #000;
+    border-radius: 2px;
+}
+
+.content-carrousel img{
+    image-rendering: auto;
+    transition:all 100ms;
+    width: 100%;
+    height: 100%;
+}
+
+.content-carrousel img:hover{
+    transform: scale (1.2);
+    transition: all 300ms;
+}
+@keyframes: rotar {
+    from { 
+        transform: rotateY(0deg)
+    } to {transform: rotateY(360deg)    
+    }
+}
+
