--- a/style.css
+++ b/style.css
@@ -1,82 +1,52 @@
-.slideshow {
-margin : 0 auto;
-    padding-top: 50px;
-    height: 700px;
-    background: none;
-    box-sizing: border-box;
+.rotating-box{
+width: 400px;
+    height:400px;
+    margin: 10px auto;
+    perspective: 800px;
 }
-    
-.content {
-margin: auto;
-    width: 190px;
-    perspective: 1000px;
-    position: relative;
-    padding-top: 80px;
-    }
-
-.content-carrousel{
-width: 100%;
-    position: absolute;
-    float: right;
-    animation: rotar 15s infinite linear;
-    transform-style: preserve-3d;
+.single-rb{
+width: 400px;
+    animation:rotate 15s linear infinite;
+    transform-style:preserve-3d;
+    margin-top: 120px;
 }
-
-.content-carrousel: hover{
-    animation-play-state: paused;
-    cursor: pointer;
+.single-rb img{
+height=400px
+    width=400px
 }
-
-.content-carrousel figure{
-    height: 100%;
-    width: 120px;
-    border: 1px solid #d444d;
-    overflow: hidden;
-    position: absolute;
-}
-
-.content-carrousel figure nth-child(sthomp18.github.io/images/bosses.jpg) {
-    transform: rotateY(0deg) translateZ(300px);  
-}
-
-.content-carrousel figure nth-child(sthomp18.github.io/images/ADIDASDP34M.jpg) {
-    transform: rotateY(40deg) translateZ(300px);  
-}
-
-.content-carrousel figure nth-child(sthomp18.github.io/images/th.jpg) {
-    transform: rotateY(80deg) translateZ(300px);  
-}
-
-.content-carrousel figure nth-child(sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg) {
-    transform: rotateY(120deg) translateZ(300px);  
-}
-
-.content-carrousel figure nth-child(shadow"><img src="sthomp18.github.io/images/POLMCS4.jpg) {
-    transform: rotateY(160deg) translateZ(300px);  
-}
-
-.shadow {
+.single-rb div{
 position: absolute;
-    box-shadow: 0px 0px 20px 0px #000;
-    border-radius: 2px;
+    height=400px
+    width=400px
 }
-
-.content-carrousel img{
-    image-rendering: auto;
-    transition:all 300ms;
-    width: 100%;
-    height: 100%;
+.front-side{
+    transform: translateZ(200px);
 }
-
-.content-carrousel img:hover{
-    transform: scale (1.2);
-    transition: all 300ms;
+.back-side{
+transform: rotateY(180deg) translateZ(200px);
 }
-@keyframes: rotar {
-    from { 
-        transform: rotateY(0deg)
-    } to {transform: rotateY(360deg)    
-    }
+.left-side{
+transform:rotateY(-90deg)
+    translateX(-200px);
+    transform-origin:left;
 }
-
+.right-side{
+transform:rotateY(90deg)
+    translateX(200px);
+    transform-origin:right;
+}
+.top-side{
+transform:rotateX(-90deg)
+    translateY(-200px);
+    transform-origin:top;
+}
+.bottom-side{
+transform:rotateX(90deg)
+    translateY(200px);
+    transform-origin:bottom;
+}
+@keyframes rotate{
+    0%{transform:rotateY(0%);}
+    100%{transform:rotateY(360deg);}
+}
 
