--- a/style.css
+++ b/style.css
@@ -1,53 +1,46 @@
-.rotating-box{
-    width: 400px;
-    height:400px;
-    margin: 10px auto;
-    perspective: 800px;
+html {
 }
-.single-rb{
-    width: 400px;
-    animation:rotate 15s linear infinite;
-    transform-style:preserve-3d;
-    margin-top: 120px;
+body 
+
+    ul {
+       margin:0px;
+       padding:0px;
+       list-style: none;
+    }
+ul li {
+     float:left;
+    width:150px;
+        height:50px;
+    background-color:Purple;
+    opacity:.8;
+    line-height: 50px;
+    text-align:center;
+    font-size:20px;
+    font-family: ariel;
+    margin-right: 7px;
+    }
+ul li a {
+    text-decoration: none;
+    color: white;
+    display: block;
 }
-.single-rb img{
-    height: 400px;
-    width: 400px;
+ul li a:hover {
+    background-color:aqua; 
+    }
+ul li ul li {
+    display: none;
 }
-.single-rb div{
-    position: absolute;
-    height: 400px;
-    width: 400px;
+ul li:hover ul li {
+    display: block;
 }
-.front-side{
-    transform: translateZ(200px);
+
+{
+width: 100%;
+height: 100%;
+padding: 0;
+margin: 0px;
 }
-.back-side{
-    transform: rotateY(180deg) 
-    translateZ(200px);
-}
-.left-side{
-    transform:rotateY(-90deg)
-    translateX(-200px);
-    transform-origin:left;
-}
-.right-side{
-    transform:rotateY(90deg)
-    translateX(200px);
-    transform-origin:right;
-}
-.top-side{
-    transform:rotateX(-90deg)
-    translateY(-200px);
-    transform-origin:top;
-}
-.bottom-side{
-    transform:rotateX(90deg)
-    translateY(200px);
-    transform-origin:bottom;
-}
-@keyframes rotate{
-    0%{transform:rotateY(0%);}
-    100%{transform:rotateY(360deg);}
-}
+
+
+
 
