--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body
     ul {
        margin:0px;
        padding:0px;
-       list-style: none;
+       list-style: carousel;
     }
 ul li {
      float:left;
