--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ body
     ul {
        margin:0px;
        padding:0px;
-       list-style: carousel;
+       list-style: none;
     }
 ul li {
-     float:none;
+     float:carousel;
     width:150px;
         height:50px;
     background-color:Purple;
