--- a/style.css
+++ b/style.css
@@ -40,7 +40,12 @@ height: 100%;
 padding: 0;
 margin: 0px;
 }
-
+#wholepage{
+    width:100%;
+        height:100%;
+        padding:0;
+        margin:0px;
+}
 
 
 
