--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ padding-bottom:0px;
         height:100%;
         margin-left:auto;
         margin-right:auto;
+    background-color:Black;
 }
 
 
