--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body
        margin:0px;
        padding:0px;
        list-style: none;
+        background-color : black;
     }
 ul li {
      float: Left;
