--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
 }
 body {
-background-color:black;
+background-image:url(https://giphy.com/gifs/loop-money-l41YoVcd7UhOWIDBK);
 }
 
     ul {
