--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ h1 {
   box-sizing: border-box; }
 
 body {
-  background: #1b1b1b;
+  background: #ffffff;
   font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
   font-weight: 300; }
 
