--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ ul li {
      float: Left;
     width:150px;
         height:50px;
-    background-color:White;
+    background-color:green;
     opacity:.8;
     line-height: 50px;
     text-align:center;
