--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ body {
   opacity: 0.9;
   height: 200px;
   width: 200px;
-  
+  background-image:url("img src="sthomp18.github.io/images/Polar-Bears-Pictures.jpg");
   -webkit-touch-callout: none;
   -moz-touch-callout: none;
   -ms-touch-callout: none;
