--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ h1 {
   box-sizing: border-box; }
 
 body {
-  background: #ffffff;
+  background: #1b1b1b;
   font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
   font-weight: 300; }
 
@@ -127,7 +127,7 @@ body {
   opacity: 0.9;
   height: 200px;
   width: 200px;
-  background-image:url("img src="sthomp18.github.io/images/Polar-Bears-Pictures.jpg");
+  background-image: url("http://jordizle.com/static/img/blank.png");
   -webkit-touch-callout: none;
   -moz-touch-callout: none;
   -ms-touch-callout: none;
