--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ ul li a {
     display: block;
 }
 ul li a:hover {
-    float:none;
+    float:up;
     background-color:aqua; 
     }
 ul li ul li {
