--- a/style.css
+++ b/style.css
@@ -306,7 +306,18 @@ Body
 }
 
 html,
+body {
+  height: 100%;
+}
 
+body {
+  background: linear-gradient(135deg, #044f48, #2a7561);
+  background-size: cover;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  line-height: 1.3;
+  overflow: hidden;
+}
 
 .bg {
   width: 100%;
