--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ object:hover {
 
 div#carousel { 
   perspective: 1200px; 
-  background-image: url('http://thelistlove.files.wordpress.com/2014/03/26.jpg');
+  background-image: url('sthomp18.github.io/images/580b585b2edbce24c47b2703.png');
   height:'500px'; 
   padding-top: 50%; 
   font-size:0; 
