--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ figure#spinner {
   transform-origin: 50% 30% -500px; 
   transition: 1s; 
 } 
-figure#spinner img { 
+figure#spinner iframe { 
   width: 20%; max-width: 425px; 
   position: absolute; left: 30%;
   transform-origin: 50% 50% -500px;
