--- a/style.css
+++ b/style.css
@@ -230,12 +230,13 @@ object:hover {
     transform: scale(0.6, 0.6); } }
 
 div#carousel { 
-  perspective: 1200px; 
+  perspective: 100px; 
   height:'500px'; 
   padding-top: 50%; 
   font-size:0; 
   margin-bottom: 1rem; 
-  overflow: hidden; 
+  overflow: hidden;
+    
 }
 figure#spinner { 
   transform-style: preserve-3d; 
@@ -248,6 +249,15 @@ figure#spinner iframe {
   position: absolute; left: 30%;
   transform-origin: 50% 50% -500px;
   outline:1px solid transparent; 
+   position: absolute;
+    border: 2px solid black;
+    
+     
+    transform-style: preserve-3d;    
+    transform: rotateX(45deg); 
+    transform-style: preserve-3d;
+    transform: rotateX(45deg);
+}
 }
 figure#spinner iframe:nth-child(1) { transform:rotateY(0deg); 
 }
@@ -271,11 +281,3 @@ div#carousel ~ span {
   line-height: 0; }
 div#carousel ~ span:hover { color: #888; cursor: pointer; }
 
-.banner> div { 
-  perspective: 1200px; 
-  height:'500px'; 
-  padding-top: 50%; 
-  font-size:0; 
-  margin-bottom: 1rem; 
-  overflow: hidden; 
-}
