--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
 .awesomecontainer {
  height:200px;
  width:700px;
- background-color:blue;
+  background-image:url('https://www.bing.com/th?id=OIP.iSumS9NHq6KtMV0VnOodTwHaE7&w=287&h=184&c=7&o=5&pid=1.7');
 }
 
 .cube {
