--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ body {
 .awesomecontainer {
  height:200px;
  width:700px;
+    background-image:url('sthomp18.github.io/images/giphy (1).gif');
  }
 
 .cube {
