--- a/style.css
+++ b/style.css
@@ -66,7 +66,10 @@ border-style: solid;
 border-color:red;
  overflow: scroll;
 height:500px;
-    width:100%;}
+    width:100%;
+opacity:0.7;
+background-image:url(sthomp18.github.io/images/Cool-wallpapers (1).jpg);
+}
 
 #right-sidebar{
     width:150px;
