--- a/style.css
+++ b/style.css
@@ -298,8 +298,8 @@ Mixins
 
 
 block {
-  height:500px;
-  width:500px;
+  height:700px;
+  width:100%;
 
   
   font-family: 'Open Sans', sans-serif;
