--- a/style.css
+++ b/style.css
@@ -279,8 +279,8 @@ div#carousel ~ span:hover { color: #888; cursor: pointer; }
 
 slider {
   display: block;
-  width:900px;
-  height:490px;
+  width:100%;
+  height:700px;
     background-color:#1f1f1f;
   overflow:hidden;
   position: absolute;
@@ -288,8 +288,8 @@ slider {
 slider > * {
   position:absolute;
   display:block;
-  width:900px;
-  height:490px;
+  width:100%;
+  height:700px;
   background:#1f1f1f;
   animation: slide 12s infinite;
   overflow: hidden;
