--- a/style.css
+++ b/style.css
@@ -1,76 +1,8 @@
 html {
 }
 
-    ul {
-       margin:0px;
-       padding:0px;
-       list-style: none;
-        
-    }
-ul li {
-     float: Left;
-    width:150px;
-        height:50px;
-    background-color:d3d3d3;
-    opacity:.8;
-    line-height: 50px;
-    text-align:center;
-    font-size:20px;
-    font-family: ariel;
-    margin-right: 7px;
-    }
-ul li a {
-    text-decoration: none;
-    color: red;
-    display: block;
-}
-ul li a:hover {
-    float:up;
-    background-color:aqua; 
-    }
-ul li ul li {
-    display: none;
-}
-ul li:hover ul li {
-    display: block;
-}
+  
 
-#wholepage{
-    width:1000px;
-        height:100%;
-        margin-left:auto;
-        margin-right:auto;
-}
-
-
-
-
-#left-sidebar{
-    width:150px;
-   
-    float:left;
-    
-}
-
-div.bordercontrol {
-border-style: solid;
-border-color:red;
- overflow: scroll;
-height:500px;
-    width:100%;
-}
-
-#right-sidebar{
-    width:150px;
-    
-    float:right;
-}
-
-
-*, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
 
 #wrapper {
   padding-top: 5%; }
@@ -221,105 +153,39 @@ object:hover {
     -o-transform: scale(0.6, 0.6);
     transform: scale(0.6, 0.6); } }
 
-div#carousel { 
-  perspective: 1200px; 
-  height:'500px'; 
-  padding-top: 50%; 
-  font-size:0; 
-  margin-bottom: 1rem; 
-  overflow: hidden;
-    
+body{
+	background-color:#ffd8d8;;
 }
-figure#spinner { 
-  transform-style: preserve-3d; 
-    margin-top: -25rem;
-  transform-origin: 50% 30% -500px; 
-  transition: 1s; 
-} 
-figure#spinner iframe { 
-  width: 20%; max-width: 425px; 
-  position: absolute; left: 30%;
-  transform-origin: 50% 50% -500px;
-  outline:1px solid transparent; 
-   position: absolute;
-    border: 2px solid black;
-    
+.bordercontrol{
+	width:300px;
+	
 }
+.border1{
+	border-style:outset;
+	border-color:red;
+	height:110px;
+	background-image:url('https://i.pinimg.com/originals/21/20/16/212016cb60b434f726cfb3dce166661a.jpg');
 }
-figure#spinner iframe:nth-child(1) { transform:rotateY(0deg); 
+.border2{
+	border-style:outset;
+	border-color:red;
+	height:110px;
+	background-image:url('https://i.pinimg.com/originals/21/20/16/212016cb60b434f726cfb3dce166661a.jpg');
 }
-figure#spinner iframe:nth-child(2) { transform: rotateY(-45deg); }
-figure#spinner iframe:nth-child(3) { transform: rotateY(-90deg); }
-figure#spinner iframe:nth-child(4) { transform: rotateY(-135deg); }
-figure#spinner iframe:nth-child(5){ transform: rotateY(-180deg); }
-figure#spinner iframe:nth-child(6){ transform: rotateY(-225deg); }
-figure#spinner iframe:nth-child(7){ transform: rotateY(-270deg); }
-figure#spinner iframe:nth-child(8){ transform: rotateY(-315deg); }
-div#carousel ~ span { 
-  color: #fff; 
-  margin: 5%; 
-  display: inline-block; 
-  text-decoration: none; 
-  font-size: 2rem; 
-  transition: 0.6s color; 
-  position: relative; 
-  margin-top: -6rem; 
-  border-bottom:0 ; 
-  line-height: 0; }
-div#carousel ~ span:hover { color: #888; cursor: pointer; }
-
-slider {
-  display: block;
-  width:100%;
-  height:700px;
-    background-color:#1f1f1f;
-  overflow:hidden;
-  position: absolute;
+.border3{
+	border-style:outset;
+	border-color:red;
+	height:110px;
+	background-image:url('https://i.pinimg.com/originals/21/20/16/212016cb60b434f726cfb3dce166661a.jpg');
 }
-slider > * {
-  position:absolute;
-  display:block;
-  width:100%;
-  height:700px;
-  background:#1f1f1f;
-  animation: slide 12s infinite;
-  overflow: hidden;
+.border4{
+	border-style:outset;
+	border-color:red;
+	height:110px;
+	background-image:url('https://i.pinimg.com/originals/21/20/16/212016cb60b434f726cfb3dce166661a.jpg');
 }
-slide:nth-child(1) {
-  left:0%;
-  animation-delay:-1s;
-  background-size:cover;
-  background-position:center;
-}
-slide:nth-child(2) {
-  animation-delay:2s;
-  background-size:cover;
-  background-position:center;
-}
-slide:nth-child(3) {
-  animation-delay:5s;
-  background-size:cover;
-  background-position:center;
-}
-slide:nth-child(4) {
-  
-  animation-delay:8s;
-  background-size:cover;
-  background-position:center;
-}
-
-slide img {
-  text-align: center;
-  display:inline-block;
-  width:100%;
-  margine-top:340px;
-  color:#fff;
-}
-@keyframes slide{
-  0% {left:100%; width:100%}
-  5% {left:0%;}
-  25% {left: 0%;}
-  30% {left: -100%; width: 100%;}
-  30.0001% { left: -100%; width: 0%;}
-  100% {left: 100%; width: 0%;}
+h2{
+	font-size:16px;
+	text-align:left;
+	color:#white;
 }
