--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
   background-image:url('https://media.giphy.com/media/13ln9K5TWkNTLa/giphy.gif');
   background-repeat:no-repeat;
   background-size:contain;
-padding:8%;
+background-width:100%
+	
 }
 
 .bordercontrol{
