--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
   background-image:url('https://media.giphy.com/media/13ln9K5TWkNTLa/giphy.gif');
   background-repeat:no-repeat;
   background-size:contain;
-background-width:100%
-	
+background-width:100%;
+	height:500;
 }
 
 .bordercontrol{
