--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ html {
 body {
   background-image:url('https://media.giphy.com/media/13ln9K5TWkNTLa/giphy.gif');
   background-repeat:no-repeat;
-  background-size:contain;
-background-width:100%;
-	height:500;
+  background-size:100% 500px;
 }
 
 .bordercontrol{
