--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
 }
 
 body {
-  background-image:url('https://media.giphy.com/media/13ln9K5TWkNTLa/giphy.gif');
+  background-image:url('https://i.pinimg.com/564x/90/63/ac/9063ac3b0ae1c48dca140482a2898146.jpg');
   background-repeat:no-repeat;
   background-size:100% 657px;
 }
