--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 .border1{
 	border-style:outset;
-	border-color:red;
+	border-color:#E5E4E2;
 	height:110px;
 	width:300px;
   background-image:url('https://i.pinimg.com/564x/ec/65/dd/ec65dda4586c665a5addb1c3599bd7ae.jpg');
@@ -21,7 +21,7 @@ body {
 	}
 .border2{
 	border-style:outset;
-	border-color:red;
+	border-color:#E5E4E2;
 	height:110px;
 	width:300px;
   background-image:url('https://i.pinimg.com/564x/50/1c/6d/501c6de3927a44affc53be0f8933f3e3.jpg');
@@ -29,7 +29,7 @@ body {
 	}
 .border3{
 	border-style:outset;
-	border-color:red;
+	border-color:#E5E4E2;
 	height:110px;
 	width:300px;
   background-image:url('https://i.pinimg.com/564x/2a/89/41/2a8941eba203ce419762c55a724b0106.jpg');
@@ -37,7 +37,7 @@ body {
 	}
 .border4{
 	border-style:outset;
-	border-color:red;
+	border-color:#E5E4E2;
 	height:110px;
 	width:300px;
   background-image:url('https://i.pinimg.com/564x/f6/a8/10/f6a8106e0953dc99d7b0a37d9d478f0a.jpg');
