--- a/style.css
+++ b/style.css
@@ -9,10 +9,12 @@ body {
 #left-sidebar{
   float:left;
   width:500px;
+	padding-left:200px;
 }
 #right-sidebar{
   float:right;
   width:500px;
+	padding-left:200px;
 }
 .border1{
 	border-style:outset;
