--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 	border-color:#E5E4E2;
 	height:110px;
 	width:300px;
-  background-image:url('https://i.pinimg.com/564x/ec/65/dd/ec65dda4586c665a5addb1c3599bd7ae.jpg');
+  background-image:url('sthomp18.github.io/images/clothing and appliances.jpg');
   background-size:300px 110px;
 	}
 .border2{
