--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 	border-color:#E5E4E2;
 	height:110px;
 	width:300px;
-  background-image:url('sthomp18.github.io/images/clothing and appliances.jpg');
+  background-image:url('https://i.pinimg.com/564x/4b/2f/b4/4b2fb456a310675f99571646fe4c33f0.jpg');
   background-size:300px 110px;
 	}
 .border2{
