--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
 }
 
 body {
-  background-image:url('https://i.pinimg.com/564x/05/01/d7/0501d7974c8001e2aea4c58bd8292a97.jpg');
+  background-image:url('https://i.pinimg.com/originals/70/f0/e2/70f0e2407aef2c4e810ae8ed99fd9918.gif');
   background-repeat:no-repeat;
   background-size:100% 957px;
 }
@@ -29,7 +29,7 @@ body {
 	border-color:#E5E4E2;
 	height:110px;
 	width:300px;
-  background-image:url('https://i.pinimg.com/564x/50/1c/6d/501c6de3927a44affc53be0f8933f3e3.jpg');
+  background-image:url('https://i.pinimg.com/564x/98/69/5f/98695f59119c181db4b975087881dcc4.jpg');
   background-size:300px 110px;
 	}
 .border3{
