--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   background-image:url('https://i.pinimg.com/originals/ee/84/77/ee8477eebafd8fe03dfd125c022cb252.gif');
   background-repeat:no-repeat;
      background-size:100% 976;
-body-size:100% 976;
+height:976px;
 }
 #left-sidebar{
   float:left;
