--- a/style.css
+++ b/style.css
@@ -1,12 +1,6 @@
 html {
 }
 
-body {
-  background-image:url('https://i.pinimg.com/originals/ee/84/77/ee8477eebafd8fe03dfd125c022cb252.gif');
-  background-repeat:no-repeat;
-     background-size:100% 976;
-height:976px;
-}
 #left-sidebar{
   float:left;
   width:300px;
@@ -56,6 +50,11 @@ height:976px;
 	height:101px;
 
 	}
+.border7{
+	 background-image:url('https://i.pinimg.com/originals/ee/84/77/ee8477eebafd8fe03dfd125c022cb252.gif');
+  background-repeat:no-repeat;
+     background-size:100% 100%;
+}
 h2{
 	font-size:20px;
 	text-align:left;
