--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ html {
 	 background-image:url('https://i.pinimg.com/originals/ee/84/77/ee8477eebafd8fe03dfd125c022cb252.gif');
   background-repeat:no-repeat;
      background-size:100% 100%;
+	height:100%;
+	width:100%;
 }
 h2{
 	font-size:20px;
