--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ html {
 	}
 body{
 	 background-image:url('https://i.pinimg.com/originals/ee/84/77/ee8477eebafd8fe03dfd125c022cb252.gif');
+	height:600px;
   
 }
 h2{
