--- a/style.css
+++ b/style.css
@@ -51,9 +51,9 @@ html {
 
 	}
 body{
-	 background-image:url('https://i.pinimg.com/originals/ee/84/77/ee8477eebafd8fe03dfd125c022cb252.gif');
-	height:600px;
-  
+	 background-image:url('https://i.pinimg.com/originals/82/fa/46/82fa4679c11b0089123441c1a189adb9.gif');
+  background-repeat:no-repeat;
+  background-size:100% 100%;
 }
 h2{
 	font-size:20px;
