--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ html {
 	}
 .border5{
 	border-style:outset;
-	border-color:#E5E4E2;
-	width:101px; 
-	height:101px;
+	border-color:#white;
+	width:400px; 
+	height:500px;
 
 	}
 body{
