--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ html {
 	border-color:#white;
 	width:400px; 
 	height:360px;
-          background-image:url('https://i.pinimg.com/564x/00/e6/a1/00e6a1ee1bd5f97f88d557a6ccd78be7.jpg');
-	background-size:500px 400px;
+          background-image:url('homepage/images/diamond_png_image_2.png');
+	background-size:360px 400px;
 		  }
 body{
 	 background-image:url('https://i.pinimg.com/originals/82/fa/46/82fa4679c11b0089123441c1a189adb9.gif');
