--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 }
 #right-sidebar{
   float:right;
-  width:430px;
+  width:500px;
 	
 }
 .border1{
@@ -46,10 +46,10 @@ html {
 .border5{
 	border-style:outset;
 	border-color:#white;
-	width:400px; 
-	height:360px;
-          background-image:url('homepage/images/diamond_png_image_2.png');
-	background-size:360px 400px;
+	width:500px; 
+	height:500px;
+          background-image:url('https://i.pinimg.com/originals/bd/6c/59/bd6c59a1bebe561cfe58f3cabbe80ced.gif');
+	background-size:500px 500px;
 		  }
 body{
 	 background-image:url('https://i.pinimg.com/originals/82/fa/46/82fa4679c11b0089123441c1a189adb9.gif');
