--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ h2{
   flex: 1 1 auto;
   color: rgba(255, 255, 255, .5);
   overflow: hidden;
-  position: relative;
+  position: reletive;
   width: 100%;
 }
 .messages .messages-content {
@@ -171,7 +171,7 @@ h2{
   font-size: 9px;
   color: rgba(255, 255, 255, .3);
 }
-.messages .message::before {
+.messages .message {
   content: '';
   position: absolute;
   bottom: -6px;
@@ -203,7 +203,7 @@ h2{
   background: linear-gradient(120deg, #248a52, #257287);
   border-radius: 10px 10px 0 10px;
 }
-.messages .message.message-personal::before {
+.messages .message.message-personal {
   left: auto;
   right: 0;
   border-right: none;
@@ -219,7 +219,7 @@ h2{
   transform-origin: 0 0;
   animation: bounce 500ms linear both;
 }
-.messages .message.loading::before {
+.messages .message.loading {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -243,7 +243,7 @@ h2{
   height: 10px;
   position: relative;
 }
-.messages .message.loading span::before {
+.messages .message.loading span {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -259,7 +259,7 @@ h2{
   animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
   margin-left: -7px;
 }
-.messages .message.loading span::after {
+.messages .message.loading span {
   position: absolute;
   top: 50%;
   left: 50%;
