--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ html {
 body{
 	 background-image:url('https://i.pinimg.com/originals/4d/de/f1/4ddef18732b35ebab7372e1fbb01b8ce.gif');
   background-repeat:no-repeat;
-  background-size:100% 100%;
+  background-size:cover;
 }
 
 
