--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 html {
 }
-
+body {
+ background-image:url('https://i.pinimg.com/564x/b0/fa/9c/b0fa9c88d1e97ca3911f850e37507934.jpg');
+  background-repeat:no-repeat;
+  background-size:cover;
+}
 #left-sidebar{
   float:left;
   width:430px;
