--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
 }
 body {
- background-image:url('https://i.pinimg.com/564x/b0/fa/9c/b0fa9c88d1e97ca3911f850e37507934.jpg');
+ background-image:url('https://pin.it/6fa5mc4liwmgxj');
   background-repeat:no-repeat;
   background-size:cover;
 }
