--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
 }
 body {
- background-image:url('https://pin.it/6fa5mc4liwmgxj');
+ background-image:url('https://i.pinimg.com/originals/8a/21/c0/8a21c069f217aeded9101b119b2251d3.gif');
   background-repeat:no-repeat;
   background-size:cover;
 }
