--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 	
 }
 
-.border1{
+.finances1{
 	border-style:outset;
 	border-color:#E5E4E2;
 	height:210px;
@@ -20,7 +20,7 @@ html {
   background-image:url('https://i.pinimg.com/564x/82/47/c9/8247c9e12b73154408440b68015cbb1f.jpg');
   background-size:400px 210px;
 	}
-.border2{
+.stocks2{
 	border-style:outset;
 	border-color:#E5E4E2;
 	height:210px;
@@ -28,7 +28,7 @@ html {
   background-image:url('https://i.pinimg.com/564x/f6/a8/10/f6a8106e0953dc99d7b0a37d9d478f0a.jpg');
   background-size:400px 210px;
 	}
-.border3{
+.health3{
 	border-style:outset;
 	border-color:#E5E4E2;
 	height:210px;
@@ -36,12 +36,12 @@ html {
   background-image:url('https://i.pinimg.com/564x/2a/89/41/2a8941eba203ce419762c55a724b0106.jpg');
   background-size:400px 210px;
 	}
-.border4{
+.shop4{
 	border-style:outset;
 	border-color:#E5E4E2;
 	height:210px;
 	width:400px;
-  background-image:url('https://i.pinimg.com/originals/ed/7f/33/ed7f3376a543a8e997785448eae7f1a0.jpg');
+  background-image:url('https://i.pinimg.com/564x/f6/3c/ff/f63cffe57bb1cf532cabfb4c62bec0c4.jpg');
   background-size:400px 210px;
 	}
 .border5{
