--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ html {
 	background-size:500px 500px;
 		  }
 body{
-	 background-image:url('https://i.pinimg.com/originals/8a/21/c0/8a21c069f217aeded9101b119b2251d3.gif');
+	 background-image:url('https://i.pinimg.com/564x/f1/f3/f6/f1f3f6597074e40e6d2d2b70d1e9c0d3.jpg');
   background-repeat:no-repeat;
   background-size:cover;
 }
