--- a/style.css
+++ b/style.css
@@ -36,12 +36,12 @@ html {
   background-image:url('https://i.pinimg.com/564x/2a/89/41/2a8941eba203ce419762c55a724b0106.jpg');
   background-size:400px 210px;
 	}
-.shop4{
+.products4{
 	border-style:outset;
 	border-color:#E5E4E2;
 	height:210px;
 	width:400px;
-  background-image:url('https://i.pinimg.com/564x/f6/3c/ff/f63cffe57bb1cf532cabfb4c62bec0c4.jpg');
+  background-image:url('https://i.pinimg.com/564x/93/b9/a8/93b9a8acb71ee95b7a80346cdcd8f492.jpg');
   background-size:400px 210px;
 	}
 .border5{
