--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ body{
 	 background-image:url('https://i.pinimg.com/564x/f1/f3/f6/f1f3f6597074e40e6d2d2b70d1e9c0d3.jpg');
   background-repeat:no-repeat;
   background-size:cover;
+	padding-top:1px;
+	padding-bottom:1px;
+	padding-left:1px;
+	padding-right:1px;
 }
 
 
