--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ width:450px;
 	background-size:500px 500px;
 		  }
 body{
-	 background-image:url('https://i.pinimg.com/564x/f1/f3/f6/f1f3f6597074e40e6d2d2b70d1e9c0d3.jpg');
+	 background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c53860572a1c29970ce14a8.gif');
   background-repeat:no-repeat;
   background-size:cover;
 	padding-top:1px;
