--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ width:450px;
 		  }
 body{
 	 background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c53860572a1c29970ce14a8.gif');
-	
+	z-index:-10;
 }
 
 
