--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ width:450px;
   background-image:url('https://i.pinimg.com/564x/93/b9/a8/93b9a8acb71ee95b7a80346cdcd8f492.jpg');
   background-size:400px 210px;
 	}
-border5{
+.border5{
 	
 	width:950px; 
 	height:1100px;
