--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html {
+html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c53860572a1c29970ce14a8.gif');
+	
 }
 
 #left-sidebar{
@@ -8,7 +9,7 @@ html {
 }
 #right-sidebar{
   float:right;
-  width:500px;
+  width:460px;
 	
 }
 .membershiparea{
@@ -60,8 +61,7 @@ width:450px;
 	z-index:-5;
 		  }
 body{
-	 background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c53860572a1c29970ce14a8.gif');
-	z-index:-10;
+	
 }
 
 
