--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ width:360px;
 	display:flex;
 	background-color:rgba(5, 0, 255, 0.5);
 	height:600px;
+	background-image:url("https://i.pinimg.com/originals/e5/80/e8/e580e878183fa3051cef6a7548688290.gif");
+	background-repeat:no-repeat;
+	background-size:cover;
 }
 
 .finances1{
