--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c5
 #left-sidebar{
   float:left;
   width:430px;
+	padding-top:5px;
 	
 }
 #right-sidebar{
