--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ width:360px;
 	height:600px;
 	background-image:url("https://i.pinimg.com/originals/e5/80/e8/e580e878183fa3051cef6a7548688290.gif");
 	background-repeat:no-repeat;
-	background-size:cover;
+	background-size:360px 600px;
 }
 
 .finances1{
