--- a/style.css
+++ b/style.css
@@ -47,12 +47,8 @@ html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c5
 .membershiparea{
 width:360px;
 	display:flex;
-	background-color:rgba(5, 0, 255, 0.5);
 	height:600px;
-	background-image:url("https://i.pinimg.com/originals/e5/80/e8/e580e878183fa3051cef6a7548688290.gif");
-	background-repeat:no-repeat;
-	background-size:360px 600px;
-}
+	background-image:url("https://i.p/e8/e580e878183fa
 
 .finances1{
 	border-style:outset;
