--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c5
 width:360px;
 	display:flex;
 	height:600px;
-	background-image:url("https://i.p/e8/e580e878183fa
+}
 
 .finances1{
 	border-style:outset;
