--- a/style.css
+++ b/style.css
@@ -117,6 +117,19 @@ h2{
 	color:#white;
 }
 
+.superfly{
+  width:620px;
+  
+  margin-left:28%;
+  margin-right:40%;
+  background-color:rgba(220, 220, 220, .5);
+}
+button{
+  height:150px;
+  border-shadow:5px;
+  border-color:rgba(222, 0, 222, 1);
+  opacity:.5;
+}
 .neon
 {
   position:absolute;
