--- a/style.css
+++ b/style.css
@@ -62,6 +62,9 @@ html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c5
   width:360px;
 	
 }
+p{
+  color:white;
+}
 .membershiparea{
 width:360px;
 	display:flex;
