--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c5
 }
 p{
   color:white;
+	font-size:19px;
 }
 .membershiparea{
 width:360px;
