--- a/style.css
+++ b/style.css
@@ -129,6 +129,12 @@ h2{
   margin-right:40%;
   background-color:rgba(220, 220, 220, .5);
 }
+.clothed{
+		   height:550px;
+		   width:700px;
+		   background-image:url("https://i.pinimg.com/originals/3c/7e/42/3c7e42eb3b17d39c2ed1f9ec5101617f.jpg");
+		   background-size:cover;
+		   background-repeat:no-repeat;}
 button{
   height:150px;
   border-shadow:5px;
