--- a/style.css
+++ b/style.css
@@ -136,14 +136,15 @@ h2{
 		   background-size:cover;
 		   background-repeat:no-repeat;}
 .withlove{
-	width:750px;
-	height:400px;
+	width:100%;
+	height:150px;
 }
 button{
+	position:absolute;
   height:150px;
   border-shadow:5px;
   border-color:rgba(222, 0, 222, 1);
-  opacity:1;
+  
 	
 }
 .neon
