--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c5
 }
 .containers{
  position:absolute;
-  z-index:6;
+  z-index:50;
   background-image:url("https://i.pinimg.com/originals/ff/f0/95/fff095595082fc78413f8b9358696c82.png");
  
-  width:250px;
+  width:100%;
   height:150px;
   animation:moneytime 5s linear 1s infinite;
   -webkit-animation: moneytime 5s linear 1s infinite;/* Safari 4.0 - 8.0 */
@@ -31,7 +31,6 @@ html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c5
     right:75%;
   }
 }
-
 .slide{
   width: 230px;
   height: 350px;
