--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c53860572a1c29970ce14a8.gif');
 	
 }
+.revolver{
+  width:100%;
+  height:160px;
+  overflow:hidden;
+  z-index:75;
+}
 .containers{
  position:absolute;
   z-index:50;
