--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c53860572a1c29970ce14a8.gif');
-	
+	height:1000px;
+		width:900px;
+	overflow:hidden;
 }
 .revolver{
   width:100%;
@@ -12,27 +14,27 @@ html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c5
   z-index:50;
   width:100%;
   height:150px;
-  animation:moneytime 5s linear 1s infinite;
-  -webkit-animation: moneytime 5s linear 1s infinite;/* Safari 4.0 - 8.0 */
+  animation:moneytime 3s linear 1s infinite;
+  -webkit-animation: moneytime 3s linear 1s infinite;/* Safari 4.0 - 8.0 */
 }
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes moneytime{
   from{
-    right:10px;
+    right:1%;
     
   }
   to{
-    right:75%;
+    right:95%;
    
   }
 }
 @keyframes moneytime{
   from{
-    right:10px;
+    right:1%;
     
   }
   to{
-    right:75%;
+    right:95%;
   }
 }
 .slide{
@@ -186,4 +188,9 @@ button{
 	z-index:-3;
 	opacity:.5;
 	filter:blur(40px);
+}
+body{
+	width:900px;
+	height:800px;
+	overflow:scroll;
 }
