--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ h2{
 		   background-image:url("https://i.pinimg.com/originals/a7/a5/96/a7a59632f36880d78e0940112f341a1f.jpg");
 		   background-size:cover;
 		   background-repeat:no-repeat;
-                   padding-bottom:5px;
+                   padding-bottom:5%;
 }
 .withlove{
 	width:100%;
