--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html { background-image:url('https://i.pinimg.com/originals/3a/0b/40/3a0b40d96c53860572a1c29970ce14a8.gif');
+html { background-color:rgba(225, 0, 225, 1);
 	height:1000px;
 		width:100%;
 	overflow:hidden;
