--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ h9{
 }
 .loverboy{
 	border-style:outset;
-	background-image:url('https://i.pinimg.com/564x/aa/ec/fb/aaecfbf5713710f1c0b63cbc3df06f02.jpg');
+	background-image:url('https://i.pinimg.com/originals/4d/de/f1/4ddef18732b35ebab7372e1fbb01b8ce.gif');
 	height:210px;
 	width:400;
 	background-size:400px 210px;
