--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ width:360px;
 	border-color:#E5E4E2;
 	height:210px;
 	width:400px;
-  background-image:url('https://media3.giphy.com/media/l41YoVcd7UhOWIDBK/giphy.gif');
+  background-image:url('https://i.pinimg.com/originals/04/69/77/046977bbd5b3678cbe301d60f1672bba.gif');
   background-size:400px 210px;
 	}
 .stocks2{
@@ -104,7 +104,7 @@ width:360px;
 	border-color:#E5E4E2;
 	height:210px;
 	width:400px;
-  background-image:url('https://media0.giphy.com/media/FRfhS8hv0U0Te/giphy.gif');
+  background-image:url('https://i.pinimg.com/originals/ea/92/80/ea9280576b225178b7bb1215246bfee9.gif');
   background-size:400px 210px;
 	}
 .products4{
