--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ width:360px;
 	border-color:#E5E4E2;
 	height:210px;
 	width:400px;
-  background-image:url('https://media1.giphy.com/media/RSZI67yZwYsxi/giphy.gif');
+  background-image:url('https://i.pinimg.com/564x/5d/76/a0/5d76a093d187b1c899466faaff1a4dae.jpg');
   background-size:400px 210px;
 	}
 .border5{
